src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__uint16__cast_uint16_to_float64.snap
---
source: src/expr/src/scalar/func/impls/uint16.rs
expression: "#[sqlfunc(\n    sqlname = \"uint2_to_double\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastFloat64ToUint16),\n    is_monotone = true\n)]\nfn cast_uint16_to_float64(a: u16) -> f64 {\n    f64::from(a)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastUint16ToFloat64;
impl crate::func::EagerUnaryFunc for CastUint16ToFloat64 {
    type Input<'a> = u16;
    type Output<'a> = f64;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_uint16_to_float64(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastFloat64ToUint16)
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastUint16ToFloat64 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("uint2_to_double")
    }
}
fn cast_uint16_to_float64(a: u16) -> f64 {
    f64::from(a)
}
